# app/aziende.js
@@ -1,53 +1,51 @@
 const express = require('express');
 const router = express.Router();
 const Azienda = require('./models/azienda');
+const tokenChecker = require('./tokenChecker');
 
 // Registrazione nuova azienda
 router.post('', async (req,res) => {
-    let azienda = new Azienda({
+    try{
+        let azienda = new Azienda({
         nome_azienda: req.body.email,
         partita_IVA: req.body.partita_IVA,
         email: req.body.email,
         password: req.body.password,
-    });
+        });
 
-    if(!azienda.nome_azienda || typeof azienda.nome_azienda != 'string') {
-        res.status(400).json({ error: 'Il campo nome deve essere di tipo string'});
-        return;
-    } 
-    if (!azienda.partita_IVA || typeof azienda.partita_IVA != 'string') {
-        res.status(400).json({ error: 'Il campo cognome deve essere di tipo string'});
-        return;
-    } 
-    if (!azienda.email || typeof azienda.email != 'string' || !checkIfEmailInString(azienda.email)) {
-        res.status(400).json({ error: 'Il campo email deve essere di tipo string di formato email'});
-        return;
-    } 
-    
-    azienda = await azienda.save();
+        if(!azienda.nome_azienda || typeof azienda.nome_azienda != 'string') {
+            return res.status(400).json({ error: 'Il campo nome deve essere di tipo string'});
+        } 
+        if (!azienda.partita_IVA || typeof azienda.partita_IVA != 'string') {
+            return res.status(400).json({ error: 'Il campo cognome deve essere di tipo string'});
+        } 
+        if (!azienda.email || typeof azienda.email != 'string' || !checkIfEmailInString(azienda.email)) {
+            return res.status(400).json({ error: 'Il campo email deve essere di tipo string di formato email'});
+        } 
+        
+        azienda = await azienda.save();
 
-    let aziendaId = azienda.id;
-
-    res.location("/api/v1/aziende" + aziendaId).status(201).send(); // ????
+        res.location("/api/v1/aziende").status(201).send();
+    } catch (err) {
+        console.error(err);
+        return res.status(500).json({ error: "Errore del server, riprova più tardi"});
+    }
 
 });
 
 // Visualizzazione area personale dell'azienda
-router.get('', async (req,res) => {
-    if(!req.loggedUser) { return; }
-    
-    let azienda = await Azienda.findOne({email: req.body.email });
+router.get('', tokenChecker, async (req,res) => {    
+    let azienda = await Azienda.findOne({email: req.loggedUser.email });
     res.status(200).json({
-        self: 'api/v1/azienda',
+        self: '/api/v1/aziende',
         nome: azienda.nome_azienda,
         partita_IVA: azienda.partita_IVA,
         email: azienda.email,
-        password: azienda.password
     })
 })
 
 // Modifica area personale azienda DA RIVEDERE 
-router.put('', async(req,res) => {
+router.put('', tokenChecker, async(req,res) => {
     try{
         const { dati } = req.body;
         if(!dati){ return res.status(400).json({error:"Richiesta non valida: dati mancanti o non validi"})};
@@ -64,7 +62,7 @@ router.put('', async(req,res) => {
 
     } catch(err) {
         console.error(err);
-        res.status(500).json({ error: "Errore del server, riprova più tardi"});
+        return res.status(500).json({ error: "Errore del server, riprova più tardi"});
     }
 })
 
