# app/operatori_comunali.js
@@ -1,60 +1,62 @@
 const express = require('express');
 const router = express.Router();
 const Operatore_Comunale = require('./models/operatore_comunale');
+const tokenChecker = require('./tokenChecker');
 
 // Registrazione nuovo operatore_comunale
 router.post('', async (req,res) => {
-    let operatore_comunale = new Operatore_Comunale({
+    try{
+        let operatore_comunale = new Operatore_Comunale({
         nome: req.body.email,
         cognome: req.body.cognome,
         email: req.body.email,
         codice_fiscale: req.body.codice_fiscale,
         password: req.body.password,
-    });
+        });
 
-    if(!operatore_comunale.nome || typeof operatore_comunale.nome != 'string') {
-        res.status(400).json({ error: 'Il campo nome deve essere di tipo string'});
-        return;
-    } 
-    if (!operatore_comunale.cognome || typeof operatore_comunale.cognome != 'string') {
-        res.status(400).json({ error: 'Il campo cognome deve essere di tipo string'});
-        return;
-    } 
-    if (!operatore_comunale.email || typeof operatore_comunale.email != 'string' || !checkIfEmailInString(operatore_comunale.email)) {
-        res.status(400).json({ error: 'Il campo email deve essere di tipo string di formato email'});
-        return;
-    } 
-    if (!operatore_comunale.codice_fiscale || typeof operatore_comunale.codice_fiscale != 'string') {
-        res.status(400).json({ error: 'Il campo codice_fiscale deve essere di tipo string'});
-        return;
+        if(!operatore_comunale.nome || typeof operatore_comunale.nome != 'string') {
+            return res.status(400).json({ error: 'Richiesta non valida: il campo nome deve essere di tipo string'});
+        } 
+        if (!operatore_comunale.cognome || typeof operatore_comunale.cognome != 'string') {
+            return res.status(400).json({ error: 'Richiesta non valida: il campo cognome deve essere di tipo string'});
+        } 
+        if (!operatore_comunale.email || typeof operatore_comunale.email != 'string' || !checkIfEmailInString(operatore_comunale.email)) {
+            return res.status(400).json({ error: 'Richiesta non valida: il campo email deve essere di tipo string di formato email'});
+        } 
+        if (!operatore_comunale.codice_fiscale || typeof operatore_comunale.codice_fiscale != 'string') {
+            return res.status(400).json({ error: 'Richiesta non valida: il campo codice_fiscale deve essere di tipo string'});
+        }
+        
+        operatore_comunale = await operatore_comunale.save();
+
+        res.location("/ap1/v1/operatori_comunali").status(201).send();
+    } catch (err) {
+        console.error(err);
+        return res.status(500).json({ error: "Errore del server, riprova più tardi"});
     }
-    
-    operatore_comunale = await operatore_comunale.save();
-
-    let operatore_comunaleId = operatore_comunale.id;
-
-    res.location("/ap1/v1/operatori_comunali" + operatore_comunaleId).status(201).send(); // ????
 
 });
 
 
 // Visualizzazione area personale dell'operatore_comunale
-router.get('', async (req,res) => {
-    if(!req.loggedUser) { return; }
-    
-    let operatore_comunale = await Operatore_Comunale.findOne({email: req.body.email });
-    res.status(200).json({
-        self: 'api/v1/azienda',
-        nome: operatore_comunale.nome,
-        cognome: operatore_comunale.cognome,
-        email: operatore_comunale.email,
-        codice_fiscale: operatore_comunale.codice_fiscale,
-        password: operatore_comunale.password
-    })
+router.get('', tokenChecker, async (req,res) => {
+    try{        
+        let operatore_comunale = await Operatore_Comunale.findOne({email: req.loggedUser.email });
+        res.status(200).json({
+            self: '/api/v1/operatori_comunali',
+            nome: operatore_comunale.nome,
+            cognome: operatore_comunale.cognome,
+            email: operatore_comunale.email,
+            codice_fiscale: operatore_comunale.codice_fiscale,
+        })
+    } catch(err) {
+        console.error(err);
+        return res.status(500).json({ error: "Errore del server, riprova più tardi"});
+    }
 })
 
 // Modifica area personale operatore_comunale DA RIVEDERE 
-router.put('', async(req,res) => {
+router.put('', tokenChecker, async(req,res) => {
     try{
         const { dati } = req.body;
         if(!dati){ return res.status(400).json({error:"Richiesta non valida: dati mancanti o non validi"})};
@@ -71,7 +73,7 @@ router.put('', async(req,res) => {
 
     } catch(err) {
         console.error(err);
-        res.status(500).json({ error: "Errore del server, riprova più tardi"});
+        return res.status(500).json({ error: "Errore del server, riprova più tardi"});
     }
 })
 
